--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "bbym-next",
   "version": "1.0.0",
@@ -13,13 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^14.0.4",
+    "@gsap/react": "^2.0.2",
+    "@react-three/drei": "^9.89.3",
+    "@react-three/fiber": "^8.15.12",
+    "gsap": "^3.12.3",
+    "next": "^15.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.15.12",
-    "@react-three/drei": "^9.89.3",
-    "three": "^0.159.0",
-    "gsap": "^3.12.3",
-    "@gsap/react": "^2.0.2"
+    "three": "^0.159.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.3.0"
   }
 }
