--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,35 @@
-node_modules
-.DS_Store
-.next/
-.config/
-.cursor/
-.cursorrules
-.windsurfrules
-node_modules/
-package-lock.json
-public/
-public/models/
-public/textures/
-public/videos/
-public/images/
-public/fonts/
-public/icons/
-public/og-image.png
-public/favicon.ico
-public/manifest.json
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnpm
+/yarn.lock
+
+# next.js
+/.next/
+/out/
+
+# vercel
+/.vercel
+
+# deployment
+/build
+
+# testing
+/coverage
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# production
+.env*.production
+
+# misc
+/.DS_Store
+*.pem
