--- a/package.json
+++ b/package.json
@@ -2,28 +2,50 @@
   "name": "bbym-next",
   "version": "1.0.0",
   "description": "Birmingham-Bessemer Youth Ministries website",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "process-models": "ts-node scripts/processModels.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@gltf-transform/core": "^3.10.0",
+    "@gltf-transform/extensions": "^3.10.0",
+    "@gltf-transform/functions": "^3.10.0",
     "@gsap/react": "^2.0.2",
-    "@react-three/drei": "^9.89.3",
-    "@react-three/fiber": "^8.15.12",
-    "gsap": "^3.12.3",
+    "@react-three/postprocessing": "^2.7.1",
+    "canvas": "^2.11.2",
+    "draco3d": "^1.5.7",
+    "filereader": "^0.10.3",
+    "gltf-pipeline": "^4.1.0",
+    "gsap": "^3.12.7",
+    "ktx2-encoder": "^0.1.1",
     "next": "^15.2.1",
+    "postprocessing": "^6.33.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.159.0"
+    "suspend-react": "^0.1.3",
+    "three": "^0.159.0",
+    "vblob": "^1.1.0"
   },
   "devDependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@types/gsap": "^1.20.2",
+    "@types/node": "^20.17.23",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "@types/three": "^0.159.0",
     "autoprefixer": "^10.4.14",
+    "gltfjsx": "^6.5.3",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
