--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "bbym-next",
   "version": "1.0.0",
   "description": "Birmingham-Bessemer Youth Ministries website",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "process-models": "ts-node scripts/processModels.ts"
+    "process-models": "ts-node scripts/processModels.ts",
+    "lint": "next lint",
+    "optimize-assets": "node scripts/optimize-assets.js"
   },
   "keywords": [],
   "author": "",
@@ -26,9 +27,11 @@
     "gsap": "^3.12.7",
     "ktx2-encoder": "^0.1.1",
     "next": "^15.2.1",
+    "node-fetch": "^3.3.2",
     "postprocessing": "^6.33.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
     "suspend-react": "^0.1.3",
     "three": "^0.159.0",
     "vblob": "^1.1.0"
