--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ logs/*
 /.idea/
 /*.sublime-project
 /*.sublime-workspace
+.cusor
+docs 
 
 # OS generated files
 Thumbs.db
@@ -101,7 +103,9 @@ jspm_packages/
 dist/
 tmp/
 temp/
-
+node_modules/
+node_modules
+.cursorrules
 # Yarn Integrity file
 .yarn-integrity
 
