--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "@gsap/react": "^2.0.2",
     "@headlessui/react": "^2.2.0",
     "@react-three/postprocessing": "^2.19.1",
-    "canvas": "^2.11.2",
     "chart.js": "^4.4.8",
     "critters": "^0.0.23",
     "draco3d": "^1.5.7",
     "embla-carousel-react": "^8.5.2",
     "filereader": "^0.10.3",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "11.0.8",
     "gltf-pipeline": "^4.1.0",
     "gltf-validator": "^2.0.0-dev.3.10",
     "gsap": "^3.12.7",
     "ktx2-encoder": "^0.1.1",
+    "lodash": "^4.17.21",
     "meshoptimizer": "^0.22.0",
     "next": "^15.2.1",
     "node-fetch": "^3.3.2",
@@ -42,15 +42,18 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.10.1",
     "react-tooltip": "^5.28.0",
     "suspend-react": "^0.1.3",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.0.2",
     "three": "^0.159.0",
     "vblob": "^1.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.51.1",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@types/gsap": "^1.20.2",
@@ -60,8 +63,12 @@
     "@types/react-dom": "^18.2.19",
     "@types/three": "^0.159.0",
     "autoprefixer": "^10.4.21",
+    "canvas": "^2.11.2",
+    "cursor-tools": "latest",
     "gltfjsx": "^6.5.3",
+    "playwright": "^1.50.1",
     "postcss": "^8.5.3",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
