--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-parallax-tilt": "^1.7.287",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.10.1",
     "react-tooltip": "^5.28.0",
@@ -54,7 +55,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
-    "@react-three/drei": "^9.122.0",
+    "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^8.18.0",
     "@types/gsap": "^1.20.2",
     "@types/lodash": "^4.17.16",
