--- a/.gitignore
+++ b/.gitignore
@@ -1,131 +1,35 @@
-Here is an enhanced version of your `.gitignore` file with additional entries to make it more robust and secure:
-
-```
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.cursor
+
 # dependencies
 /node_modules/
-/.pnpm/
-yarn.lock
-package-lock.json
-pnpm-lock.yaml
+/.pnp/
+/.pnp.js
+
+# testing
+/coverage/
 
 # next.js
 /.next/
 /out/
 
-# vercel
-/.vercel/
-
-# deployment
+# production
 /build/
 
-# testing
-/coverage/
-/test-results/
+# misc
+.DS_Store
+*.pem
+*.bak
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-*.log
 
 # local env files
-.env
-.env.*.local
-.env.local
-.env.*.development
-.env.development.local
-.env.*.production
-.env.production.local
-.env.*.test
-.env.test.local
+.env*.local
 
-# production
-.env*.production
+# vercel
+.vercel
 
-# logs
-logs
-*.log
-logs/*
-
-# misc
-/.DS_Store
-*.pem
-*.key
-*.crt
-*.cert
-*.p12
-
-# IDEs and editors
-/.vscode/
-/.vscode/* 
-.idea/
-/.idea/
-/*.sublime-project
-/*.sublime-workspace
-.cusor
-docs 
-
-# OS generated files
-Thumbs.db
-*.DS_Store
-.DS_Store?
-Icon?
-ehthumbs.db
-.sass-cache
-*.swp
-*.lock
-*~
-.*.swp
-._*
-
-# Dependency directories
-jspm_packages/
-
-# TypeScript
-*.tsbuildinfo
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional stylelint cache
-.stylelintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Build directories
-dist/
-tmp/
-temp/
-node_modules/
-node_modules
-.cursorrules
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# macOS directory attributes
-.AppleDouble
-.LSOverride
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-
-# Windows shortcuts
-*.lnk
-```
-
-This version includes more comprehensive coverage of common files and directories to ignore, ensuring a more secure and streamlined repository.
+# vscode
+.vscode
